--- a/devel/boost-libs/Makefile
+++ b/devel/boost-libs/Makefile
@@ -5,7 +5,7 @@ PORTREVISION=	2
 COMMENT=	Free portable C++ libraries (without Boost.Python)
 WWW=		https://www.boost.org/
 
-LICENSE=	boost
+LICENSE=	BSL-1.0
 LICENSE_FILE=	${WRKSRC}/LICENSE_1_0.txt
 
 BUILD_DEPENDS+=	bjam:devel/boost-jam
