--- a/devel/range-v3/Makefile
+++ b/devel/range-v3/Makefile
@@ -6,7 +6,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Experimental range library for C++11/14/17
 WWW=		https://github.com/ericniebler/range-v3
 
-LICENSE=	boost
+LICENSE=	BSL-1.0
 LICENSE_FILE=	${WRKSRC}/LICENSE.txt
 
 USES=		cmake compiler:c++11-lang
