--- a/math/sleef/Makefile
+++ b/math/sleef/Makefile
@@ -6,7 +6,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	SIMD Library for Evaluating Elementary Functions, vectorized libm
 WWW=		https://sleef.org
 
-LICENSE=	boost
+LICENSE=	BSL-1.0
 LICENSE_FILE=	${WRKSRC}/LICENSE.txt
 
 LIB_DEPENDS=	libgmp.so:math/gmp	\
