--- a/devel/qt6-base/Makefile
+++ b/devel/qt6-base/Makefile
@@ -40,7 +40,7 @@ LIB_DEPENDS=	\
 USES=		cmake compiler:c++17-lang gl gnome jpeg perl5 pkgconfig python \
 		qt-dist:6 shebangfix ssl
 USE_GL=		egl opengl
-USE_GNOME=	cairo gdkpixbuf2 glib20 gtk30 pango
+USE_GNOME=	cairo gdkpixbuf glib20 gtk30 pango
 USE_LOCALE=	C.UTF-8
 
 CMAKE_ARGS=	-DOPENSSL_ROOT_DIR="${OPENSSLBASE}"
