--- a/games/freeciv/Makefile
+++ b/games/freeciv/Makefile
@@ -49,7 +49,7 @@ DB_DESC=	Database support
 UI_DESC=	GUI clients
 
 GTK3_USES=	gnome sdl
-GTK3_USE=	GNOME=cairo,gdkpixbuf2,glib20,gtk30,pango \
+GTK3_USE=	GNOME=cairo,gdkpixbuf,glib20,gtk30,pango \
 		SDL=mixer2
 GTK3_VARS=	_FREECIV_CLIENT+=gtk3 \
 		_FREECIV_CLIENT+=gtk3.22 \
