--- a/www/webkit2-gtk4/Makefile
+++ b/www/webkit2-gtk4/Makefile
@@ -44,7 +44,7 @@ PORTSCOUT=	limitw:1,even
 USES=		bison cmake compiler:c++20-lang cpe gettext gl gnome gperf jpeg \
 		localbase:ldflags perl5 pkgconfig python:build ruby:build \
 		sqlite tar:xz xorg
-USE_GNOME=	cairo gdkpixbuf2 gtk40 libxml2 libxslt introspection:build
+USE_GNOME=	cairo gdkpixbuf gtk40 libxml2 libxslt introspection:build
 USE_GL=		egl gl glesv2
 USE_LDCONFIG=	yes
 USE_PERL5=	build
