--- a/x11/xfce4-screenshooter-plugin/Makefile
+++ b/x11/xfce4-screenshooter-plugin/Makefile
@@ -19,7 +19,7 @@ LIB_DEPENDS=	libsoup-3.0.so:devel/libsoup3 \
 USES=		compiler:c11 gettext-tools gmake gnome libtool pkgconfig \
 		tar:bzip2 xfce xorg
 USE_CSTD=	c99
-USE_GNOME=	cairo gdkpixbuf2 glib20 gtk30 intltool libxml2
+USE_GNOME=	cairo gdkpixbuf glib20 gtk30 intltool libxml2
 USE_XFCE=	libexo libmenu panel xfconf
 USE_XORG=	ice sm x11 xfixes xext
 
