--- a/audio/thunar-media-tags-plugin/Makefile
+++ b/audio/thunar-media-tags-plugin/Makefile
@@ -17,7 +17,7 @@ LIB_DEPENDS=	libtag.so:audio/taglib
 
 USES=		compiler:c11 gettext-tools gmake gnome libtool pkgconfig \
 		tar:bzip2 xfce
-USE_GNOME=	cairo gdkpixbuf2 gtk30 intltool
+USE_GNOME=	cairo gdkpixbuf gtk30 intltool
 USE_XFCE=	libexo thunar
 
 GNU_CONFIGURE=	yes
