--- a/audio/xfce4-mpc-plugin/Makefile
+++ b/audio/xfce4-mpc-plugin/Makefile
@@ -17,7 +17,7 @@ RUN_DEPENDS=	musicpd:audio/musicpd
 
 USES=		compiler:c11 gettext-tools gmake gnome libtool pkgconfig \
 		tar:bzip2 xfce
-USE_GNOME=	cairo gdkpixbuf2 gtk30 intltool
+USE_GNOME=	cairo gdkpixbuf gtk30 intltool
 USE_XFCE=	panel
 
 GNU_CONFIGURE=	yes
