--- a/devel/appstream-glib/Makefile
+++ b/devel/appstream-glib/Makefile
@@ -25,7 +25,7 @@ CONFLICTS_BUILD=	appstream-glib-0.5.*
 
 USES=		compiler:c11 gettext gperf gnome iconv:wchar_t localbase libarchive meson \
 		pkgconfig sqlite ssl tar:xz
-USE_GNOME=	cairo gdkpixbuf2 glib20 gtk30 introspection:build \
+USE_GNOME=	cairo gdkpixbuf glib20 gtk30 introspection:build \
 		libxml2:build pango
 USE_LDCONFIG=	yes
 MESON_ARGS=	-Drpm=false \
