--- a/games/kanatest/Makefile
+++ b/games/kanatest/Makefile
@@ -14,7 +14,7 @@ LIB_DEPENDS+=	libharfbuzz.so:print/harfbuzz
 USES=		gmake gnome pkgconfig
 USE_GITHUB=	yes
 GH_ACCOUNT=	Clockwork6400
-USE_GNOME+=	atk cairo gdkpixbuf2 glib20 gtk30 libxml2 pango
+USE_GNOME+=	atk cairo gdkpixbuf glib20 gtk30 libxml2 pango
 GNU_CONFIGURE=	yes
 MAKE_ENV+=	LIBINTL="-lintl"
 
