--- a/misc/xfce4-appfinder/Makefile
+++ b/misc/xfce4-appfinder/Makefile
@@ -11,7 +11,7 @@ COMMENT=	Application launcher and finder
 LICENSE=	gpl2
 
 USES=		compiler:c11 gettext-tools gmake gnome pkgconfig tar:bzip2 xfce
-USE_GNOME=	cairo gdkpixbuf2 glib20 gtk30 intltool
+USE_GNOME=	cairo gdkpixbuf glib20 gtk30 intltool
 USE_XFCE=	garcon xfconf
 
 GNU_CONFIGURE=	yes
