--- a/net-im/zoom/Makefile
+++ b/net-im/zoom/Makefile
@@ -19,7 +19,7 @@ RUN_DEPENDS=	linux-c7-xcb-util-image>0:x11/linux-c7-xcb-util-image \
 		linux-c7-xcb-util>0:x11/linux-c7-xcb-util
 
 USES=		cpe desktop-file-utils linux tar:xz
-USE_LINUX=	alsalib alsa-plugins-oss atk cairo-gobject dbuslibs fontconfig freetype gdkpixbuf2 gtk3 libdrm libglvnd pango xorglibs # pulseaudio-libs (asserts under the linux emulator)
+USE_LINUX=	alsalib alsa-plugins-oss atk cairo-gobject dbuslibs fontconfig freetype gdkpixbuf gtk3 libdrm libglvnd pango xorglibs # pulseaudio-libs (asserts under the linux emulator)
 
 NO_BUILD=	yes
 
