--- a/www/webkit2-gtk3/Makefile
+++ b/www/webkit2-gtk3/Makefile
@@ -38,7 +38,7 @@ PORTSCOUT=	limitw:1,even
 USES=		bison cmake compiler:c++14-lang cpe gettext gl gnome gperf \
 		jpeg localbase:ldflags perl5 pkgconfig python:build \
 		ruby:build  sqlite tar:xz xorg
-USE_GNOME=	cairo gdkpixbuf2 gtk30 introspection:build libxml2 libxslt
+USE_GNOME=	cairo gdkpixbuf gtk30 introspection:build libxml2 libxslt
 USE_GL=		gl egl glesv2
 USE_LDCONFIG=	yes
 USE_PERL5=	build
