--- a/www/xfce4-smartbookmark-plugin/Makefile
+++ b/www/xfce4-smartbookmark-plugin/Makefile
@@ -13,7 +13,7 @@ LICENSE_FILE=	${WRKSRC}/COPYING
 
 USES=		compiler:c11 gettext-tools gmake gnome libtool pkgconfig \
 		tar:bzip2 xfce
-USE_GNOME=	cairo gdkpixbuf2 gtk30 intltool
+USE_GNOME=	cairo gdkpixbuf gtk30 intltool
 USE_XFCE=	panel
 
 GNU_CONFIGURE=	yes
