--- a/x11/cinnamon/Makefile
+++ b/x11/cinnamon/Makefile
@@ -46,7 +46,7 @@ RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}dbus>0:devel/py-dbus@${PY_FLAVOR} \
 
 USES=		compiler:c11 cpe gettext gl gnome gstreamer meson pkgconfig python:3.5+ shebangfix xorg
 CPE_VENDOR=	linuxmint
-USE_GNOME=	cairo gdkpixbuf2 glib20 gtk30 intltool introspection libxml2 pygobject3
+USE_GNOME=	cairo gdkpixbuf glib20 gtk30 intltool introspection libxml2 pygobject3
 USE_XORG=	x11 xfixes
 USE_GL=		gl
 USE_GSTREAMER1=	yes
