--- a/x11/gnome-terminal/Makefile
+++ b/x11/gnome-terminal/Makefile
@@ -26,7 +26,7 @@ PORTSCOUT=	limitw:1,even
 
 USES=		cpe gettext gnome localbase meson pathfix pkgconfig python \
 		tar:bz2 vala:build xorg
-USE_GNOME=	cairo dconf gdkpixbuf2 gtk30 intltool vte3
+USE_GNOME=	cairo dconf gdkpixbuf gtk30 intltool vte3
 USE_XORG=	x11
 CPE_VENDOR=	gnome
 
