--- a/x11/libexo/Makefile
+++ b/x11/libexo/Makefile
@@ -23,7 +23,7 @@ RUN_DEPENDS=	p5-URI>=1.70:net/p5-URI
 
 USES=		compiler:c11 gettext-tools gmake gnome libtool pathfix \
 		perl5 pkgconfig tar:bzip2 xfce xorg
-USE_GNOME=	cairo gdkpixbuf2 glib20 gtk30 intltool
+USE_GNOME=	cairo gdkpixbuf glib20 gtk30 intltool
 USE_LDCONFIG=	yes
 USE_XFCE=	libmenu
 USE_XORG=	ice sm x11
