--- a/x11/xfce4-dashboard/Makefile
+++ b/x11/xfce4-dashboard/Makefile
@@ -20,7 +20,7 @@ LIB_DEPENDS=	libjson-glib-1.0.so:devel/json-glib \
 
 USES=		compiler:c11 gettext-tools gl gmake gnome localbase libtool \
 		pathfix perl5 pkgconfig tar:bzip2 xfce xorg
-USE_GNOME=	cairo gdkpixbuf2 glib20 gtk30 intltool libwnck3
+USE_GNOME=	cairo gdkpixbuf glib20 gtk30 intltool libwnck3
 USE_XFCE=	garcon xfconf
 USE_XORG=	x11 xcomposite xdamage xext xfixes xi xinerama xrandr
 USE_GL=		egl gl
