--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1344,12 +1344,13 @@ SUBDIR += py-semver
 SUBDIR += py-sentry-sdk
 SUBDIR += py-setproctitle
 SUBDIR += py-setuptools
-SUBDIR += py-setuptools44
 SUBDIR += py-setuptools-git
-SUBDIR += py-setuptools_git_ls_files
+SUBDIR += py-setuptools-pkg
 SUBDIR += py-setuptools-rust
-SUBDIR += py-setuptools_hg
 SUBDIR += py-setuptools-scm
+SUBDIR += py-setuptools44
+SUBDIR += py-setuptools_git_ls_files
+SUBDIR += py-setuptools_hg
 SUBDIR += py-setuptools_scm7
 SUBDIR += py-setuptools_scm_git_archive
 SUBDIR += py-sgmllib3k
