add llvm17.  (in progress)

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -382,6 +382,7 @@ SUBDIR += llvm11
 SUBDIR += llvm12
 SUBDIR += llvm15
 SUBDIR += llvm16
+SUBDIR += llvm17
 SUBDIR += llvm-devel
 SUBDIR += lndir
 SUBDIR += log4cplus
