--- a/comms/qt5-sensors/Makefile
+++ b/comms/qt5-sensors/Makefile
@@ -9,6 +9,7 @@ COMMENT=	Qt sensors module
 USES=		compiler:c++11-lang perl5 qmake:norecursive qt-dist:5,sensors
 USE_PERL5=	build
 USE_QT=		core declarative buildtools:build
+USE_LDCONFIG=	${PREFIX}/${QT_LIBDIR_REL}
 
 post-install:
 	${REINPLACE_CMD} 's|/../../../../|/../../../|g' \
