--- a/graphics/qt5-svg/Makefile
+++ b/graphics/qt5-svg/Makefile
@@ -9,6 +9,7 @@ COMMENT=	Qt SVG support module
 USES=		compiler:c++11-lang perl5 qmake qt-dist:5,svg
 USE_PERL5=	build
 USE_QT=		core gui widgets buildtools:build
+USE_LDCONFIG=	${PREFIX}/${QT_LIBDIR_REL}
 
 post-install:
 	${REINPLACE_CMD} 's|/../../../../|/../../../|g' \
