--- a/devel/py-qt5/Makefile
+++ b/devel/py-qt5/Makefile
@@ -10,6 +10,6 @@ WWW=		https://riverbankcomputing.com/software/pyqt
 
 USES=		metaport python pyqt:5
 USE_PYTHON=	concurrent flavors py3kplist
-USE_PYQT=	pyqt5 chart networkauth
+USE_PYQT=	pyqt5 3d charts datavis3d networkauth
 
 .include <bsd.port.mk>
