--- a/x11-themes/Makefile
+++ b/x11-themes/Makefile
@@ -18,6 +18,13 @@ SUBDIR += icon-naming-utils
 SUBDIR += icons-tango
 SUBDIR += icons-tango-extras
 SUBDIR += irssi-themes
+SUBDIR += kf5-kemoticons
+SUBDIR += kf5-kiconthemes
+SUBDIR += kf5-qqc2-desktop-style
+SUBDIR += kf6-breeze-icons
+SUBDIR += kf6-kcolorscheme
+SUBDIR += kf6-kiconthemes
+SUBDIR += kf6-qqc2-desktop-style
 SUBDIR += la-capitaine-icon-theme
 SUBDIR += lumina-themes
 SUBDIR += matcha-gtk-themes
