--- a/x11-themes/gnome-backgrounds/Makefile
+++ b/x11-themes/gnome-backgrounds/Makefile
@@ -1,7 +1,6 @@
-# Created by: Joe Marcus Clarke <marcus@FreeBSD.org>
-
 PORTNAME=	gnome-backgrounds
-PORTVERSION=	40.1
+PORTVERSION=	43
+PORTREVISION=	1
 CATEGORIES=	x11-themes graphics gnome
 MASTER_SITES=	GNOME/sources/${PORTNAME}/${PORTVERSION:C/^([0-9]+)\..*/\1/}
 DIST_SUBDIR=	gnome
@@ -14,9 +13,12 @@ LICENSE_FILE=	${WRKSRC}/COPYING
 
 PORTSCOUT=	limitw:1,even
 
-BUILD_DEPENDS+=	ninja:devel/ninja
-
 NO_ARCH=	yes
-USES=		gettext meson python:3.9,build tar:xz
+USES=		gettext meson tar:xz
+
+post-install:
+	@${MKDIR} ${STAGEDIR}${PREFIX}/share/cinnamon-background-properties
+	@${FIND} ${STAGEDIR}${PREFIX}/share/gnome-background-properties -type f -name '*.xml' \
+		-exec ${RLN} {} ${STAGEDIR}${PREFIX}/share/cinnamon-background-properties \;
 
 .include <bsd.port.mk>
