--- a/x11-toolkits/Makefile
+++ b/x11-toolkits/Makefile
@@ -25,6 +25,16 @@ SUBDIR += gtksourceview4
 SUBDIR += gtksourceview5
 SUBDIR += gtksourceviewmm3
 SUBDIR += irrlicht
+SUBDIR += kf6-attica
+SUBDIR += kf6-kcompletion
+SUBDIR += kf6-kconfigwidgets
+SUBDIR += kf6-kguiaddons
+SUBDIR += kf6-kirigami
+SUBDIR += kf6-kitemviews
+SUBDIR += kf6-kjobwidgets
+SUBDIR += kf6-ktextwidgets
+SUBDIR += kf6-kwidgetsaddons
+SUBDIR += kf6-kxmlgui
 SUBDIR += libadwaita
 SUBDIR += libdazzle
 SUBDIR += libdecor
