--- a/x11-themes/mate-backgrounds/Makefile
+++ b/x11-themes/mate-backgrounds/Makefile
@@ -1,13 +1,12 @@
-# Created by: Joe Marcus Clarke <marcus@FreeBSD.org>
-
 PORTNAME=	mate-backgrounds
-PORTVERSION=	1.26.0
+PORTVERSION=	1.28.0
 CATEGORIES=	x11-themes graphics mate
 MASTER_SITES=	MATE
 DIST_SUBDIR=	mate
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Collection of backgrounds for MATE
+WWW=		https://mate-desktop.org/
 
 LICENSE=	gpl2
 LICENSE_FILE=	${WRKSRC}/COPYING
