--- a/devel/py-invoke/Makefile
+++ b/devel/py-invoke/Makefile
@@ -1,24 +1,29 @@
-# Created by: Mark Felder <feld@FreeBSD.org>
-
 PORTNAME=	invoke
-PORTVERSION=	1.5.0
+PORTVERSION=	2.2.0
 PORTREVISION=	2
 CATEGORIES=	devel python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 
 MAINTAINER=	ports@MidnightBSD.org
-COMMENT=	Python task execution tool & library
+COMMENT=	Python task execution tool and library
+WWW=		https://www.pyinvoke.org/ \
+		https://github.com/pyinvoke/invoke
 
 LICENSE=	bsd2
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
+BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}setuptools>=0:devel/py-setuptools@${PY_FLAVOR} \
+		${PYTHON_PKGNAMEPREFIX}wheel>=0:devel/py-wheel@${PY_FLAVOR}
+
 USES=		python
-USE_PYTHON=	autoplist concurrent distutils
+USE_PYTHON=	autoplist concurrent pep517
 
 NO_ARCH=	yes
 
-post-patch:
-	@${RM} -fr ${WRKSRC}/invoke/vendor/yaml2
+OPTIONS_DEFINE=	SUDO
+SUDO_DESC=	Run shell commands via sudo
+
+SUDO_RUN_DEPENDS=	sudo:security/sudo
 
 .include <bsd.port.mk>
