--- a/devel/py-appdirs/Makefile
+++ b/devel/py-appdirs/Makefile
@@ -1,19 +1,22 @@
-# Created by: Thomas Zander <riggs@FreeBSD.org>
-
 PORTNAME=	appdirs
 PORTVERSION=	1.4.4
+PORTREVISION=	1
 CATEGORIES=	devel python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Python module for determining platform-specific dirs
+WWW=		https://github.com/ActiveState/appdirs
 
 LICENSE=	mit
 LICENSE_FILE=	${WRKSRC}/LICENSE.txt
 
+BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}setuptools>=0:devel/py-setuptools@${PY_FLAVOR} \
+		${PYTHON_PKGNAMEPREFIX}wheel>=0:devel/py-wheel@${PY_FLAVOR}
+
 USES=		python
-USE_PYTHON=	autoplist distutils
+USE_PYTHON=	autoplist concurrent pep517
 
 NO_ARCH=	yes
 USE_LOCALE=	en_US.UTF-8
