--- a/devel/py-blinker/Makefile
+++ b/devel/py-blinker/Makefile
@@ -1,22 +1,23 @@
-# Created by: Kubilay Kocak <koobs@FreeBSD.org>
-
 PORTNAME=	blinker
-PORTVERSION=	1.5
+PORTVERSION=	1.9.0
 CATEGORIES=	devel python
-MASTER_SITES=	PYPI
+MASTER_SITES=	PYPI \
+		https://github.com/pallets-eco/blinker/releases/download/${PORTVERSION}/
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Fast, simple object-to-object and broadcast signaling
-WWW=		https://pythonhosted.org/blinker/
+WWW=		https://pythonhosted.org/blinker/ \
+		https://github.com/pallets-eco/blinker
 
 LICENSE=	mit
 LICENSE_FILE=	${WRKSRC}/LICENSE.rst
 
-USES=		python
-USE_PYTHON=	autoplist concurrent distutils
+BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}flit-core>=0<4:devel/py-flit-core@${PY_FLAVOR}
+
+USES=		python:3.9+
+USE_PYTHON=	autoplist concurrent pep517 pytest
 
 NO_ARCH=	yes
-NO_TEST=	yes
 
 .include <bsd.port.mk>
