--- a/devel/py-defusedxml/Makefile
+++ b/devel/py-defusedxml/Makefile
@@ -1,18 +1,19 @@
-# Created by: William Grzybowski <wg@FreeBSD.org>
-
 PORTNAME=	defusedxml
-PORTVERSION=	0.6.0
+PORTVERSION=	0.7.1
+PORTREVISION=	1
 CATEGORIES=	devel python textproc
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	XML bomb protection for Python stdlib modules
+WWW=		https://github.com/tiran/defusedxml
 
 LICENSE=	python
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 NO_ARCH=	yes
+NO_TEST=	yes
 USES=		python
 USE_PYTHON=	autoplist concurrent distutils
 
