--- a/devel/py-intervaltree/Makefile
+++ b/devel/py-intervaltree/Makefile
@@ -1,20 +1,22 @@
-# Created by: antoine@FreeBSD.org
-
 PORTNAME=	intervaltree
-PORTVERSION=	3.0.2
+PORTVERSION=	3.1.0
+PORTREVISION=	1
 CATEGORIES=	devel python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Editable interval tree data structure for Python 2 and 3
+WWW=		https://github.com/chaimleib/intervaltree
 
-LICENSE=	apache2
+LICENSE=	Apache-2.0
 LICENSE_FILE=	${WRKSRC}/LICENSE.txt
 
 RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}sortedcontainers>=0:devel/py-sortedcontainers@${PY_FLAVOR}
 
 USES=		python
 USE_PYTHON=	distutils autoplist
+
+NO_ARCH=	yes
 
 .include <bsd.port.mk>
