--- a/devel/py-iso8601/Makefile
+++ b/devel/py-iso8601/Makefile
@@ -1,22 +1,22 @@
-# Created by: Kubilay Kocak <koobs@FreeBSD.org>
-
 PORTNAME=	iso8601
-PORTVERSION=	0.1.12
+PORTVERSION=	2.1.0
 CATEGORIES=	devel python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 
-MAINTAINER=	porst@MidnightBSD.org
+MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Simple module to parse ISO 8601 dates
+WWW=		https://github.com/micktwomey/pyiso8601
 
 LICENSE=	mit
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
+BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}poetry-core>=1.0.0:devel/py-poetry-core@${PY_FLAVOR}
+TEST_DEPENDS=	${PYTHON_PKGNAMEPREFIX}hypothesis>=6.1.1:devel/py-hypothesis@${PY_FLAVOR}
 
 USES=		python
-USE_PYTHON=	distutils autoplist
+USE_PYTHON=	autoplist concurrent pep517 pytest
 
 NO_ARCH=	yes
-NO_TEST=	yes
 
 .include <bsd.port.mk>
