--- a/devel/py-pycodestyle/Makefile
+++ b/devel/py-pycodestyle/Makefile
@@ -1,24 +1,24 @@
-# Created by: Dmitry Marakasov <amdmi3@FreeBSD.org>
-
 PORTNAME=	pycodestyle
-PORTVERSION=	2.7.0
+PORTVERSION=	2.13.0
 CATEGORIES=	devel python
-MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Python style guide checker
+WWW=		https://pycodestyle.readthedocs.io/en/latest/ \
+		https://pypi.org/project/pycodestyle/ \
+		https://github.com/PyCQA/pycodestyle
 
 LICENSE=	mit
 
 USES=		python
+USE_GITHUB=	yes
+GH_ACCOUNT=	PyCQA
 USE_PYTHON=	autoplist concurrent distutils
+# pytest
 NO_ARCH=	yes
 
 # tests pass local, fail on magus
 NO_TEST=	yes
-
-#do-test:
-#	@cd ${WRKSRC} && ${PYTHON_CMD} -m unittest discover testsuite
 
 .include <bsd.port.mk>
