--- a/devel/py-sortedcontainers/Makefile
+++ b/devel/py-sortedcontainers/Makefile
@@ -1,15 +1,14 @@
-# Created by: antoine@FreeBSD.org
-
 PORTNAME=	sortedcontainers
-PORTVERSION=	2.3.0
+PORTVERSION=	2.4.0
 CATEGORIES=	devel python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Python Sorted Container Types: SortedList, SortedDict, and SortedSet
+WWW=		https://www.grantjenks.com/docs/sortedcontainers/
 
-LICENSE=	apache2
+LICENSE=	Apache-2.0
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 NO_ARCH=	yes
