--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -173,7 +173,7 @@ SUBDIR += php83-posix
 SUBDIR += policykit
 SUBDIR += polkit
 SUBDIR += polkit-gnome
-SUBDIR += polkit-qt
+SUBDIR += polkit-qt-1
 SUBDIR += powerdxx
 SUBDIR += pstree
 SUBDIR += pv
