--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -105,6 +105,11 @@ SUBDIR += isc-cron
 SUBDIR += jailme
 SUBDIR += javaservicewrapper
 SUBDIR += k9s
+SUBDIR += kf5-baloo
+SUBDIR += kf5-kwallet
+SUBDIR += kf6-baloo
+SUBDIR += kf6-kuserfeedback
+SUBDIR += kf6-kwallet
 SUBDIR += ldap-account-manager
 SUBDIR += less
 SUBDIR += libcdio
