add kf* textproc

--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -62,6 +62,9 @@ SUBDIR += iso8879
 SUBDIR += itstool
 SUBDIR += jade
 SUBDIR += jq
+SUBDIR += kf6-kcodecs
+SUBDIR += kf6-sonnet
+SUBDIR += kf6-syntax-highlighting
 SUBDIR += kibana8
 SUBDIR += kmflcomp
 SUBDIR += latex-service
