add kf ports net

--- a/net/Makefile
+++ b/net/Makefile
@@ -65,6 +65,17 @@ SUBDIR += isc-dhcp44-relay
 SUBDIR += isc-dhcp44-server
 SUBDIR += jrdesktop
 SUBDIR += kea
+SUBDIR += kf5-kcalendarcore
+SUBDIR += kf5-kcontacts
+SUBDIR += kf5-kdav
+SUBDIR += kf5-kholidays
+SUBDIR += kf5-kxmlrpcclient
+SUBDIR += kf5-syndication
+SUBDIR += kf6-kcalendarcore
+SUBDIR += kf6-kcontacts
+SUBDIR += kf6-kdav
+SUBDIR += kf6-kholidays
+SUBDIR += kf6-syndication
 SUBDIR += realtek-re-kmod
 SUBDIR += rubygem-http_parser.rb
 SUBDIR += rubygem-serverengine
