--- a/dns/Makefile
+++ b/dns/Makefile
@@ -15,6 +15,8 @@ SUBDIR += encrypted-dns-server
 SUBDIR += erlang-idna
 SUBDIR += idnkit
 SUBDIR += inadyn
+SUBDIR += kf5-kdnssd
+SUBDIR += kf6-kdnssd
 SUBDIR += knot3
 SUBDIR += knot3-lib
 SUBDIR += ldns
