--- a/misc/Makefile
+++ b/misc/Makefile
@@ -33,6 +33,8 @@ SUBDIR += hicolor-icon-theme
 SUBDIR += hwdata
 SUBDIR += iso-codes
 SUBDIR += jishyo
+SUBDIR += kf5-purpose
+SUBDIR += kf6-purpose
 SUBDIR += localedata
 SUBDIR += mate-user-guide
 SUBDIR += mbuffer
