--- a/x11/Makefile
+++ b/x11/Makefile
@@ -37,8 +37,23 @@ SUBDIR += idesk
 SUBDIR += innerspace
 SUBDIR += keybinder
 SUBDIR += keybinder-gtk3
+SUBDIR += kf5-frameworkintegration
+SUBDIR += kf5-frameworks
+SUBDIR += kf5-kactivities
+SUBDIR += kf5-kactivities-stats
+SUBDIR += kf5-kded
+SUBDIR += kf5-kdelibs4support
+SUBDIR += kf5-kglobalaccel
+SUBDIR += kf5-kinit
+SUBDIR += kf5-krunner
 SUBDIR += kf5-kwayland
+SUBDIR += kf5-kwindowsystem
+SUBDIR += kf5-plasma-framework
+SUBDIR += kf6-frameworkintegration
 SUBDIR += kf6-frameworks
+SUBDIR += kf6-kded
+SUBDIR += kf6-kglobalaccel
+SUBDIR += kf6-krunner
 SUBDIR += kf6-kwindowsystem
 SUBDIR += libICE
 SUBDIR += libSM
