--- a/deskutils/Makefile
+++ b/deskutils/Makefile
@@ -36,6 +36,10 @@ SUBDIR += javajj
 SUBDIR += jjclient
 SUBDIR += jlj
 SUBDIR += libportal
+SUBDIR += kdeconnect-kde
+SUBDIR += kdepim
+SUBDIR += kdepim-addons
+SUBDIR += kdepim-runtime
 SUBDIR += kf6-kstatusnotifieritem
 SUBDIR += libportal-gtk3
 SUBDIR += libportal-gtk4
