--- a/net-mgmt/Makefile
+++ b/net-mgmt/Makefile
@@ -3,6 +3,7 @@ COMMENT = Network management tools
 SUBDIR += aircrack-ng
 SUBDIR += docsis
 SUBDIR += flow-tools
+SUBDIR += kf6-networkmanager-qt
 SUBDIR += kismet
 SUBDIR += librenms
 SUBDIR += libsmi
@@ -11,6 +12,7 @@ SUBDIR += nagios
 SUBDIR += nagios-plugins
 SUBDIR += nagios4
 SUBDIR += net-snmp
+SUBDIR += networkmanager-shim
 SUBDIR += p5-Cflow
 SUBDIR += p5-Cisco-Reconfig
 SUBDIR += p5-Data-Validate-IP
