--- a/security/Makefile
+++ b/security/Makefile
@@ -58,6 +58,8 @@ SUBDIR += ipfw2dshield
 SUBDIR += ipsec-tools
 SUBDIR += keepass
 SUBDIR += keepass-plugin-keepassrpc
+SUBDIR += kf5-kdesu
+SUBDIR += kf6-kdesu
 SUBDIR += krb5
 SUBDIR += krb5-120
 SUBDIR += krb5-121
