--- a/x11/Makefile
+++ b/x11/Makefile
@@ -35,6 +35,9 @@ SUBDIR += iceauth
 SUBDIR += ico
 SUBDIR += idesk
 SUBDIR += innerspace
+SUBDIR += kde
+SUBDIR += kde-baseapps
+SUBDIR += kde-gear
 SUBDIR += keybinder
 SUBDIR += keybinder-gtk3
 SUBDIR += kf5-frameworkintegration
@@ -139,6 +142,20 @@ SUBDIR += nvidia-xconfig
 SUBDIR += openrgb
 SUBDIR += pixman
 SUBDIR += plasma-wayland-protocols
+SUBDIR += plasma6-kactivitymanagerd
+SUBDIR += plasma6-kgamma
+SUBDIR += plasma6-kglobalacceld
+SUBDIR += plasma6-kscreen
+SUBDIR += plasma6-kwayland
+SUBDIR += plasma6-layer-shell-qt
+SUBDIR += plasma6-libkscreen
+SUBDIR += plasma6-libplasma
+SUBDIR += plasma6-plasma-activities-stats
+SUBDIR += plasma6-plasma-activities
+SUBDIR += plasma6-plasma-desktop
+SUBDIR += plasma6-plasma-integration
+SUBDIR += plasma6-plasma-workspace
+SUBDIR += plasma6-plasma
 SUBDIR += py-python-xapp
 SUBDIR += py-xcffib
 SUBDIR += py-xdot
