--- a/www/Makefile
+++ b/www/Makefile
@@ -33,6 +33,8 @@ SUBDIR += http-parser
 SUBDIR += hypermail
 SUBDIR += joomla4
 SUBDIR += kcgi
+SUBDIR += kdsoap
+SUBDIR += kdsoap-ws-discovery-client
 SUBDIR += libapreq2
 SUBDIR += libdatachannel
 SUBDIR += libdom
