--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -12,6 +12,7 @@ SUBDIR += bacula9-client
 SUBDIR += bacula9-docs
 SUBDIR += bacula9-server
 SUBDIR += backuppc
+SUBDIR += baloo-widgets
 SUBDIR += bamf
 SUBDIR += batmon
 SUBDIR += battmond
@@ -175,6 +176,20 @@ SUBDIR += php82-fileinfo
 SUBDIR += php82-posix
 SUBDIR += php83-fileinfo
 SUBDIR += php83-posix
+SUBDIR += plasma-pass
+SUBDIR += plasma5-libksysguard
+SUBDIR += plasma6-discover
+SUBDIR += plasma6-drkonqi
+SUBDIR += plasma6-kde-cli-tools
+SUBDIR += plasma6-kinfocenter
+SUBDIR += plasma6-kmenuedit
+SUBDIR += plasma6-ksystemstats
+SUBDIR += plasma6-libksysguard
+SUBDIR += plasma6-plasma-disks
+SUBDIR += plasma6-plasma-systemmonitor
+SUBDIR += plasma6-polkit-kde-agent-1
+SUBDIR += plasma6-powerdevil
+SUBDIR += plasma6-systemsettings
 SUBDIR += policykit
 SUBDIR += polkit
 SUBDIR += polkit-gnome
