--- a/sysutils/u-boot-imx-serial-loader/Makefile
+++ b/sysutils/u-boot-imx-serial-loader/Makefile
@@ -2,11 +2,11 @@ PORTNAME=	u-boot-imx-serial-loader
 PORTVERSION=	2017.01
 CATEGORIES=	sysutils
 
-MAINTAINER=	ports@FreeBSD.org
+MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Load u-boot via USB or UART on i.MX5, i.MX6, i.MX7, and Vybrid
 WWW=		https://github.com/boundarydevices/imx_usb_loader
 
-LICENSE=	LGPL21
+LICENSE=	lgpl2.1
 
 USE_GITHUB=	yes
 GH_ACCOUNT=	boundarydevices
