add libksane, gwenview, kamera, kcolor*

--- a/graphics/Makefile
+++ b/graphics/Makefile
@@ -89,6 +89,7 @@ SUBDIR += gstreamer1-plugins-vulkan
 SUBDIR += gstreamer1-plugins-webp
 SUBDIR += gstreamer1-plugins-zbar
 SUBDIR += gtk-update-icon-cache
+SUBDIR += gwenview
 SUBDIR += icoutils
 SUBDIR += image-editor
 SUBDIR += imageviewer
@@ -98,6 +99,13 @@ SUBDIR += jasper
 SUBDIR += jbig2dec
 SUBDIR += jbigkit
 SUBDIR += jpeg-turbo
+SUBDIR += kamera
+SUBDIR += kcolorchooser
+SUBDIR += kcolorpicker
+SUBDIR += kdegraphics-mobipocket
+SUBDIR += kdegraphics-svgpart
+SUBDIR += kdegraphics-thumbnailers
+SUBDIR += kdegraphics
 SUBDIR += kf5-kimageformats
 SUBDIR += kf5-kplotting
 SUBDIR += kf5-kquickcharts
@@ -136,6 +144,7 @@ SUBDIR += libiptcdata
 SUBDIR += libjpeg-turbo
 SUBDIR += libjxl
 SUBDIR += libkexiv2
+SUBDIR += libksane
 SUBDIR += libliftoff
 SUBDIR += liblqr-1
 SUBDIR += libmng
@@ -293,6 +302,7 @@ SUBDIR += sdl2_ttf
 SUBDIR += sekrit-twc-zimg
 SUBDIR += shaderc
 SUBDIR += silgraphite
+SUBDIR += skanlite
 SUBDIR += spirv-tools
 SUBDIR += svgalib
 SUBDIR += sxiv
