--- a/graphics/Makefile
+++ b/graphics/Makefile
@@ -224,6 +224,7 @@ SUBDIR += mypaint-brushes2
 SUBDIR += netpbm
 SUBDIR += nvidia-texture-tools
 SUBDIR += ocrad
+SUBDIR += okular
 SUBDIR += opencv
 SUBDIR += openexr
 SUBDIR += openjpeg
@@ -258,6 +259,7 @@ SUBDIR += poppler
 SUBDIR += poppler-data
 SUBDIR += poppler-glib
 SUBDIR += poppler-qt5
+SUBDIR += poppler-qt6
 SUBDIR += poppler-utils
 SUBDIR += preview
 SUBDIR += price
