--- a/security/Makefile
+++ b/security/Makefile
@@ -63,6 +63,7 @@ SUBDIR += kf6-kdesu
 SUBDIR += krb5
 SUBDIR += krb5-120
 SUBDIR += krb5-121
+SUBDIR += kwalletmanager
 SUBDIR += libargon2
 SUBDIR += libassuan
 SUBDIR += libcaes
@@ -254,6 +255,7 @@ SUBDIR += py-rsa
 SUBDIR += py-scramp
 SUBDIR += py-service-identity
 SUBDIR += py-trustme
+SUBDIR += qtkeychain
 SUBDIR += rhash
 SUBDIR += rustls-ffi
 SUBDIR += s2n-tls
