--- a/ports-mgmt/Makefile
+++ b/ports-mgmt/Makefile
@@ -6,6 +6,8 @@ SUBDIR += magus-utils
 SUBDIR += modules2tuple
 SUBDIR += mport
 SUBDIR += mport-manager
+SUBDIR += packagekit
+SUBDIR += packagekit-qt
 SUBDIR += portconfig
 SUBDIR += portfmt
 SUBDIR += portlint
