--- a/databases/Makefile
+++ b/databases/Makefile
@@ -37,6 +37,7 @@ SUBDIR += linux-c7-unixODBC
 SUBDIR += linux-rl9-libtracker-sparql
 SUBDIR += linux-rl9-sqlite3
 SUBDIR += lmdb
+SUBDIR += lua-xapian
 SUBDIR += mariadb-connector-c
 SUBDIR += mariadb-connector-odbc
 SUBDIR += mariadb106-client
@@ -127,6 +128,7 @@ SUBDIR += phpliteadmin
 SUBDIR += phpmyadmin
 SUBDIR += phpmyadmin5
 SUBDIR += phppgadmin
+SUBDIR += php-xapian
 SUBDIR += postgresql-jdbc
 SUBDIR += postgresql-libpqxx
 SUBDIR += postgresql13-client
@@ -175,6 +177,7 @@ SUBDIR += py-sqlalchemy-migrate
 SUBDIR += py-sqlite3
 SUBDIR += py-sqlobject
 SUBDIR += py-sqlparse
+SUBDIR += py-xapian
 SUBDIR += qdbm
 SUBDIR += qt5-sql
 SUBDIR += qt5-sqldrivers-mysql
@@ -190,6 +193,7 @@ SUBDIR += redis72
 SUBDIR += redis74
 SUBDIR += rrdtool
 SUBDIR += ruby-bdb
+SUBDIR += ruby-xapian
 SUBDIR += sfcgal
 SUBDIR += spatialite
 SUBDIR += sqlclient
@@ -203,5 +207,7 @@ SUBDIR += unixODBC
 SUBDIR += valkey
 SUBDIR += virtualpg
 SUBDIR += vsqlite
+SUBDIR += xapian-bindings
+SUBDIR += xapian-core
 
 .include <bsd.port.subdir.mk>
