--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -106,11 +106,13 @@ SUBDIR += isc-cron
 SUBDIR += jailme
 SUBDIR += javaservicewrapper
 SUBDIR += k9s
+SUBDIR += kdialog
 SUBDIR += kf5-baloo
 SUBDIR += kf5-kwallet
 SUBDIR += kf6-baloo
 SUBDIR += kf6-kuserfeedback
 SUBDIR += kf6-kwallet
+SUBDIR += khelpcenter
 SUBDIR += ldap-account-manager
 SUBDIR += less
 SUBDIR += libcdio
