--- a/x11-toolkits/Makefile
+++ b/x11-toolkits/Makefile
@@ -46,6 +46,7 @@ SUBDIR += kf6-kjobwidgets
 SUBDIR += kf6-ktextwidgets
 SUBDIR += kf6-kwidgetsaddons
 SUBDIR += kf6-kxmlgui
+SUBDIR += kirigami-addons-qt6
 SUBDIR += libadwaita
 SUBDIR += libdazzle
 SUBDIR += libdecor
