add some kde stuff

--- a/net-im/Makefile
+++ b/net-im/Makefile
@@ -4,6 +4,8 @@ SUBDIR += farstream
 SUBDIR += finch
 SUBDIR += folks
 SUBDIR += jabberd
+SUBDIR += kaccounts-integration
+SUBDIR += kaccounts-providers
 SUBDIR += libaccounts-qt
 SUBDIR += libnice
 SUBDIR += libnice-gst1
