--- a/net/Makefile
+++ b/net/Makefile
@@ -87,6 +87,7 @@ SUBDIR += libdnet
 SUBDIR += libgrss
 SUBDIR += libgweather
 SUBDIR += libgweather4
+SUBDIR += libkgapi
 SUBDIR += libmateweather
 SUBDIR += libmaxminddb
 SUBDIR += libnatpmp
