--- a/net/Makefile
+++ b/net/Makefile
@@ -65,6 +65,7 @@ SUBDIR += isc-dhcp44-relay
 SUBDIR += isc-dhcp44-server
 SUBDIR += jrdesktop
 SUBDIR += kea
+SUBDIR += kcalutils
 SUBDIR += kf5-kcalendarcore
 SUBDIR += kf5-kcontacts
 SUBDIR += kf5-kdav
@@ -76,6 +77,7 @@ SUBDIR += kf6-kcontacts
 SUBDIR += kf6-kdav
 SUBDIR += kf6-kholidays
 SUBDIR += kf6-syndication
+SUBDIR += kpimtextedit
 SUBDIR += realtek-re-kmod
 SUBDIR += rubygem-http_parser.rb
 SUBDIR += rubygem-serverengine
