add some kde stuff

--- a/net/Makefile
+++ b/net/Makefile
@@ -2,6 +2,7 @@ COMMENT = Networking tools
 
 SUBDIR += 44bsd-rdist
 SUBDIR += activemq
+SUBDIR += akonadi-mime
 SUBDIR += aquantia-atlantic-kmod
 SUBDIR += asio
 SUBDIR += avahi
@@ -78,7 +79,14 @@ SUBDIR += kf6-kdav
 SUBDIR += kf6-kholidays
 SUBDIR += kf6-syndication
 SUBDIR += kidentitymanagement
+SUBDIR += kimap
+SUBDIR += kldap
+SUBDIR += kmailtransport
+SUBDIR += kmbox
+SUBDIR += kmime
+SUBDIR += kontactinterface
 SUBDIR += kpimtextedit
+SUBDIR += ksmtp
 SUBDIR += realtek-re-kmod
 SUBDIR += rubygem-http_parser.rb
 SUBDIR += rubygem-serverengine
